[tool.poetry]
name = "repl_python3_BasicBot"
version = "0.1.0"
description = "A basic bot built by Eric and exported by those who forked this."
authors = ["EricPlayzYT <developer>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
